--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postman10@localhost:5432/test?schema=public"
+
+NEXTAUTH_SECRET="diogo"
+NEXTAUTH_URL=http://localhost:3000/
