--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "@prisma/client": "^5.4.2",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
