--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "cookie": "^0.5.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
